<resources>
    <string name="app_name">ProyectoAM</string>
    <string-array name="opciones">
        <item>Seleccione Cargo</item>
        <item>Cargo 1</item>
        <item>Cargo 2</item>
        <item>Cargo 3</item>
        <item>Cargo 4</item>
        <item>Cargo 5</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registro">REGISTRO</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="cargo">Cargo</string>
    <string name="ingrese_usuario">Ingrese Usuario</string>
    <string name="ingrese_contrase_a">Ingrese Contraseña</string>
    <string name="ingrese_correo">Ingrese correo</string>
    <string name="registrar">Registrar</string>
    <string name="desc">desc</string>
    <string name="ingrese_nombre">Ingrese Nombre</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="avatar_de_usuario">Avatar de usuario</string>


    <string name="ingrese_correo2">Ingrese Correo</string>

    <string name="ingresar">Ingresar</string>
    <string name="olvid_su_contrase_a">¿Olvidó su contraseña?</string>
</resources>